--- a/doc/pacman.8.asciidoc
+++ b/doc/pacman.8.asciidoc
@@ -200,6 +200,9 @@ Options
 	beginning with `file://`.  Any paths or URLs passed as targets will not be
 	modified.  This allows mounted guest systems to be properly operated on.
 
+*\--disable-sandbox*::
+	Disable the default sandbox applied on Linux systems to the process downloading
+        files. Use this if you have issues downloading files on Linux.
 
 Transaction Options (apply to '-S', '-R' and '-U')
 --------------------------------------------------
