--- a/doc/pacman.conf.5.asciidoc
+++ b/doc/pacman.conf.5.asciidoc
@@ -211,6 +211,10 @@ Options
 	Specifies the user to switch to for downloading files. If this config
 	option is not set then the downloads are done as the user running pacman.
 
+*DisableSandbox*::
+	Disable the default sandbox applied to the process downloading files. Use
+	this if you are compiling on a more recent kernel than the one you are
+	actually using and have issues downloading files.
 
 Repository Sections
 -------------------
